@@ -3,6 +3,7 @@ package com.employeemanagement.employeemanagement.Service;
 import com.employeemanagement.employeemanagement.Entity.Employee;
 import com.employeemanagement.employeemanagement.Repository.EmployeeRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -12,6 +13,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 
 @Service
@@ -28,6 +30,8 @@ public class CustomUserDetailsService implements UserDetailsService {
             throw new UsernameNotFoundException("Username not found");
         }
 
-        return new User(employee.getUsername(),"{noop}"+employee.getPassword(), Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER")));
+
+        List<SimpleGrantedAuthority> authorityList=List.of(new SimpleGrantedAuthority("ROLE_"+employee.getRole()));
+        return new User(employee.getUsername(),"{noop}"+employee.getPassword(), authorityList);
     }
 }
